# django-nigerian-state

./: .gitignore  LICENSE  MANIFEST.in  README.rst  deploy_test.sh  manage.py  readme.md  requirements.txt  run_tests.py  setup.cfg  setup.py
nigerian_states/: admin.py  apps.py  enums.py  fields.py  models.py  utils.py
nigerian_states/fixtures/: fixtures.json
nigerian_states/management/commands/: load_nigerian_states.py
nigerian_states/migrations/: 0001_initial.py
nigerian_states/templatetags/: default_tags.py
nigerian_states/tests/: defaults.py  test_models.py
tests/: test_fields.py  test_templatetags.py
